# Spectra-Simulator-C

./: ._Configurations  ._Data  ._Docs  ._artificial_spectrum.cpp  ._artificial_spectrum.h  ._build_lorentzian.cpp  ._build_lorentzian.h  ._bump_DP.py  ._data.h  ._eigen  ._external  ._function_rot.cpp  ._function_rot.h  ._gnuplot-iostream.h  ._iterative_artificial_spectrum.cpp  ._models_database.cpp  ._models_database.h  ._plots_diags.cpp  ._plots_diags.h  ._random_JB.cpp  ._solver_mm.py  ._write_star_params.cpp  ._write_star_params.h  .gitignore  AGENTS.md  CMakeLists.txt  README.md  acoefs.cpp  acoefs.h  artificial_spectrum.cpp  artificial_spectrum.h  build_lorentzian.cpp  build_lorentzian.h  bump_DP.cpp  bump_DP.h  bump_DP.py  changelog.md  combi.cpp  combi.h  compile.sh  (+50 more)
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml  cmake_UbuntuMac.yml  cmake_allOS  cmake_allOS.yml  docs.yml
Configurations/: ._main.cfg  main.cfg  main.cfg.MS.curvepmodes  main.cfg.MS.scaled  main.cfg.a1etaAlma3  main.cfg.aj  main.cfg.aj_GRANscaled  main.cfg.aj_GRANscaledKallinger  main.cfg.bak  main.cfg.freeDP_curvepmodes.v1  main.cfg.freeDP_curvepmodes.v2  main.cfg.freeDP_curvepmodes.v3  main.cfg.hgauss  main.cfg.test.KIC8751420  main.cfg.test.KIC9574283  main.cfg.v1  main.cfg.v2  main.cfg.v3  noise_Kallinger2014.cfg
Configurations/MixedModes_models/: Readme.txt  star_params.theoretical
Configurations/bak/: main.cfg.freeDP_curvepmodes.v1
Configurations/common_modelfile/: Readme.txt  aj_model.common  use_template.cfg
Configurations/examples_cfg/: main.cfg.Alm  main.cfg.aj  main.cfg.aj_GRANscaledKallinger  main.cfg.freeDP_curvepmodes.v3_GRANscaled
Configurations/infiles/: 00039.0.in  100002741_Madjp_data_enhanced.in  12069424.in  16CygA_mixture.in  6508366.in  6603624.in  8006161.in  8379927.in  8379927_1111kasoc_synthese.in  9139151.in  9139163.in
Configurations/savfiles/: 100002741_Madjp_data_enhanced.sav  16CygA_shoya_synthese.sav  8379927_1111kasoc_synthese.sav
Configurations/templates/: 11026764.template  11414712.template  6370489.template  8026226.template  KIC6603624.template  KIC8379927.template  KIC9139163.template  Sun-mod.template
Configurations/tmp/: modes_tmp.cfg  noise_tmp.cfg
Data/: ._Spectra_info  ._Spectra_plot  Combinations.txt
Data/Spectra_ascii/: Readme.md
Data/Spectra_info/: Readme.md
Data/Spectra_modelfile/: Readme.md
Data/Spectra_plot/: 0000001.eps  0000002.eps  0000003.eps  0000004.eps  Readme.md
Data_examples/idl_prg/: ascii2sav.pro  idl_plots_spectra.pro  read_txt.pro
Docs/: ._Manual.txt  ._Reference-vals_noise.txt  Manual.txt  Reference-vals_noise.txt
docs/: Doxyfile  Modernization_Plan.md  Readme.md  User_Guide.md  api.md  doxygen_mainpage.md  index.md  legacy_models.md  requirements.txt
docs/html/: acoefs_8cpp.html  acoefs_8h.html  acoefs_8h_source.html  annotated.html  artificial__spectrum_8cpp.html  artificial__spectrum_8h.html  artificial__spectrum_8h_source.html  build__lorentzian_8cpp.html  build__lorentzian_8h.html  build__lorentzian_8h_source.html  classes.html  combi_8cpp.html  combi_8h.html  combi_8h_source.html  data_8h.html  data_8h_source.html  derivatives__handler_8cpp.html  derivatives__handler_8h.html  derivatives__handler_8h_source.html  files.html  format_8h.html  format_8h_source.html  function__rot_8cpp.html  function__rot_8h.html  function__rot_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  globals_func_d.html  globals_func_e.html  (+87 more)
docs/models/: README.md  asymptotic_mm_freeDp_numaxspread_curvepmodes_v3_GRANscaled_Kallinger2014.md  generate_cfg_from_synthese_file_Wscaled_Alm.md  generate_cfg_from_synthese_file_Wscaled_aj.md  generate_cfg_from_synthese_file_Wscaled_aj_GRANscaled_Kallinger2014.md
eigen/: ._.hg_archival.txt  ._.hgeol  ._.hgignore  ._.hgtags  ._CMakeLists.txt  ._COPYING.BSD  ._COPYING.GPL  ._COPYING.LGPL  ._COPYING.MINPACK  ._COPYING.MPL2  ._COPYING.README  ._CTestConfig.cmake  ._CTestCustom.cmake.in  ._Eigen  ._INSTALL  ._bench  ._blas  ._cmake  ._debug  ._demos  ._doc  ._eigen3.pc.in  ._failtest  ._lapack  ._scripts  ._signature_of_eigen3_matrix_library  ._test  ._unsupported
eigen/Eigen/: ._Array  ._CMakeLists.txt  ._Cholesky  ._CholmodSupport  ._Core  ._Dense  ._Eigen  ._Eigen2Support  ._Eigenvalues  ._Geometry  ._Householder  ._IterativeLinearSolvers  ._Jacobi  ._LU  ._LeastSquares  ._MetisSupport  ._OrderingMethods  ._PaStiXSupport  ._PardisoSupport  ._QR  ._QtAlignedMalloc  ._SPQRSupport  ._SVD  ._Sparse  ._SparseCholesky  ._SparseCore  ._SparseLU  ._SparseQR  ._StdDeque  ._StdList  ._StdVector  ._SuperLUSupport  ._UmfPackSupport  ._src
eigen/bench/: ._BenchSparseUtil.h  ._BenchTimer.h  ._BenchUtil.h  ._README.txt  ._basicbench.cxxlist  ._basicbenchmark.cpp  ._basicbenchmark.h  ._benchBlasGemm.cpp  ._benchCholesky.cpp  ._benchEigenSolver.cpp  ._benchFFT.cpp  ._benchGeometry.cpp  ._benchVecAdd.cpp  ._bench_gemm.cpp  ._bench_multi_compilers.sh  ._bench_norm.cpp  ._bench_reverse.cpp  ._bench_sum.cpp  ._bench_unrolling  ._benchmark.cpp  ._benchmarkSlice.cpp  ._benchmarkX.cpp  ._benchmarkXcwise.cpp  ._benchmark_suite  ._btl  ._check_cache_queries.cpp  ._eig33.cpp  ._geometry.cpp  ._product_threshold.cpp  ._quat_slerp.cpp  ._quatmul.cpp  ._sparse_cholesky.cpp  ._sparse_dense_product.cpp  ._sparse_lu.cpp  ._sparse_product.cpp  ._sparse_randomsetter.cpp  ._sparse_setter.cpp  ._sparse_transpose.cpp  ._sparse_trisolver.cpp  ._spbench  (+2 more)
eigen/blas/: ._BandTriangularSolver.h  ._CMakeLists.txt  ._GeneralRank1Update.h  ._PackedSelfadjointProduct.h  ._PackedTriangularMatrixVector.h  (+35 more)
scripts/: compare_versions.py  make_mixed_modes_demo_movie.py  smoke_test.py  smoke_test.sh
test_fct/: lorentzian_a1a2a3_test.cpp  lorentzian_tests.cpp  quickshow.py  show_a1a2a3.pro  show_a1etaAlma3.pro  show_aj.pro
tests/: test_smoke_patch_cfg.py  test_specsim_phase0_integration.py
tmp/: .readme
(+1636 files in other folders)
